--- a/html/check.html
+++ b/html/check.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <script src="node_modules/web3.js-browser/build/web3.min.js"></script>
+    <script src="../node_modules/crypto-js/crypto-js.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="../css/check.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="../js/check.js"></script>
 
 </head>
 
@@ -34,13 +36,7 @@
         <h1 id="title">CHECK</h1>
 
         <div class="file-upload">
-            <label for="pdf-file" class="upload-btn">
-              <span class="upload-btn-text">Choisir un fichier</span>
-            </label>
-            <div class="file-drop-zone">
-                <span class="file-drop-text">Déposer le fichier ici</span>
-            </div>
-            <span class="selected-file"></span>
+            <input type="file" id="file" onChange="myFunc()" accept="pdf">
         </div>
     </div>
 
