--- a/frontend/html/ajout.html
+++ b/frontend/html/ajout.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <script src="../node_modules/web3.js-browser/build/web3.min.js"></script>
+    <script src="../node_modules/crypto-js/crypto-js.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="../js/ajout.js"></script>
-
+    <script src="../js/blockchainCalls.js"></script>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -29,15 +29,38 @@
             </div>
         </div>
     </nav>
-    <div id="maindiv">
-        <h1>Ajouter un diplome</h1>
-        <div class="file-upload">
-            <input type="file" id="file" onChange="myFunc()" accept="pdf">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="maindiv">
+                    <h1>Ajouter un diplome</h1>
+                    <form onsubmit="hashDocument()">
+                        <div class="mb-3">
+                            <label for="firstNameInput" class="form-label">First Name</label>
+                            <input type="text" name="firstName" class="form-control" id="firstNameInput" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="lastNameInput" class="form-label">Last Name</label>
+                            <input type="text" name="lastName" class="form-control" id="lastNameInput" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="dpInput" class="form-label">Professional Domain</label>
+                            <input type="text" name="dp" class="form-control" id="dpInput" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="dateCertification" class="form-label">Date of Certification</label>
+                            <input type="date" name="dateCertification" class="form-control" id="dateCertification" required>
+                        </div>
+                        <div class="file-upload">
+                            <input class="form-control" type="file" id="file" accept="pdf" required>
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+
+                </div>
+            </div>
         </div>
     </div>
-
-
-
 </body>
-
 </html>
