--- a/frontend/html/check.html
+++ b/frontend/html/check.html
@@ -9,7 +9,7 @@
     <link href="../css/check.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="../js/check.js"></script>
-
+    <script src="../js/blockchainCalls.js"></script>
 </head>
 
 <body>
@@ -34,13 +34,39 @@
 
     <div id="maindiv">
         <h1 id="title">CHECK</h1>
-
-        <div class="file-upload">
-            <input type="file" id="file" onChange="myFunc()" accept="pdf">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="file-upload">
+                        <input class="form-control" type="file" id="file" onChange="hashDocument()" accept="pdf">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="container" hidden id="containerResult">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header" id="card-result-header">
+                            <h5 class="card-title">Verify a certificate</h5>
+                        </div>
+                        <div class="card-body">
+                            <label for="firstNameResultInput">First Name</label>
+                            <input type="text" id="firstNameResultInput" class="form-control" disabled>
+                            <label for="lastNameResultInput">Last Name</label>
+                            <input type="text" id="lastNameResultInput" class="form-control" disabled>
+                            <label for="dpResultInput">Professional Domain</label>
+                            <input type="text" id="dpResultInput" class="form-control" disabled>
+                            <label for="dateResultInput">Date of Certification</label>
+                            <input type="date" id="dateResultInput" class="form-control" disabled>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-
 
 </body>
 
