modification affichage page de verification

--- a/frontend/html/check.html
+++ b/frontend/html/check.html
@@ -45,22 +45,24 @@
             </div>
         </div>
         <br>
-        <div class="container" hidden id="containerResult">
+        <div class="container" >
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header" id="card-result-header">
                             <h5 class="card-title">Verify a certificate</h5>
                         </div>
-                        <div class="card-body">
-                            <label for="firstNameResultInput">First Name</label>
-                            <input type="text" id="firstNameResultInput" class="form-control" disabled>
-                            <label for="lastNameResultInput">Last Name</label>
-                            <input type="text" id="lastNameResultInput" class="form-control" disabled>
-                            <label for="dpResultInput">Professional Domain</label>
-                            <input type="text" id="dpResultInput" class="form-control" disabled>
-                            <label for="dateResultInput">Date of Certification</label>
-                            <input type="date" id="dateResultInput" class="form-control" disabled>
+                        <div class="card-body" >
+                            <div hidden id="containerResult">
+                                <label for="firstNameResultInput">First Name</label>
+                                <input type="text" id="firstNameResultInput" class="form-control" disabled>
+                                <label for="lastNameResultInput">Last Name</label>
+                                <input type="text" id="lastNameResultInput" class="form-control" disabled>
+                                <label for="dpResultInput">Professional Domain</label>
+                                <input type="text" id="dpResultInput" class="form-control" disabled>
+                                <label for="dateResultInput">Date of Certification</label>
+                                <input type="date" id="dateResultInput" class="form-control" disabled>
+                            </div>
                         </div>
                     </div>
                 </div>
