--- a/frontend/html/ajout.html
+++ b/frontend/html/ajout.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="../../node_modules/web3.js-browser/build/web3.min.js"></script>
-    <script src="../../node_modules/crypto-js/crypto-js.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="../js/ajout.js"></script>
-    <script src="../js/blockchainCalls.js"></script>
 </head>
 <body>
+<script type="text/javascript" src="../../node_modules/web3.js-browser/build/web3.min.js"></script>
+<script type="text/javascript" src="../../node_modules/crypto-js/crypto-js.js"></script>
+<script type="text/javascript" src="../js/blockchainCalls.js"></script>
+<script type="text/javascript" src="../js/ajout.js"></script>
+<script type="text/javascript" src="../js/connection.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="../main.html">Menu</a>
@@ -62,5 +63,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
