reglage probleme authentification et page ajout dans la barre de navigation

--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <script src="../js/blockchainCalls.js"></script>
+    <script type="text/javascript" src="../js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="../main.html">Menu</a>
@@ -21,6 +23,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="./register.html">S'identifier</a>
+                    </li>
+                    <li class="nav-item" id="linkToAddCertificate">
+                        <a class="nav-link" href="./ajout.html">Ajout d'un certificat</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./check.html">Vérification</a>
@@ -49,8 +54,5 @@
         </div>
 
     </div>
-
-
-    <script src="../js/blockchainCalls.js"></script>
 </body>
 </html>
