--- a/frontend/html/ajout.html
+++ b/frontend/html/ajout.html
@@ -7,11 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-<script type="text/javascript" src="../../node_modules/web3.js-browser/build/web3.min.js"></script>
-<script type="text/javascript" src="../../node_modules/crypto-js/crypto-js.js"></script>
-<script type="text/javascript" src="../js/blockchainCalls.js"></script>
-<script type="text/javascript" src="../js/ajout.js"></script>
-<script type="text/javascript" src="../js/connection.js"></script>
+    <script type="text/javascript" src="../../node_modules/web3.js-browser/build/web3.min.js"></script>
+    <script type="text/javascript" src="../../node_modules/crypto-js/crypto-js.js"></script>
+    <script type="text/javascript" src="../js/blockchainCalls.js"></script>
+    <script type="text/javascript" src="../js/ajout.js"></script>
+    <script type="text/javascript" src="../js/connection.js"></script>
+    <script type="text/javascript" src="../js/navigation.js"></script>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="../main.html">Menu</a>
@@ -22,6 +24,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="./register.html">S'identifier</a>
+                    </li>
+                    <li class="nav-item" id="linkToAddCertificate">
+                        <a class="nav-link" href="./ajout.html">Ajout d'un certificat</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./check.html">Vérification</a>
@@ -58,11 +63,9 @@
                         <br>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
-
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
