--- a/frontend/main.html
+++ b/frontend/main.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <script src="js/blockchainCalls.js"></script>
+    <script type="text/javascript" src="js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="./main.html">Menu</a>
@@ -21,6 +23,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="html/register.html">S'identifier</a>
+                    </li>
+                    <li class="nav-item" id="linkToAddCertificate">
+                        <a class="nav-link" href="html/ajout.html">Ajout d'un certificat</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/check.html">Vérification</a>
