--- a/frontend/html/ajout.html
+++ b/frontend/html/ajout.html
@@ -16,20 +16,20 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../main.html">Menu</a>
+            <a class="navbar-brand" href="../main.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="./register.html">S'identifier</a>
+                        <a class="nav-link" href="./register.html">Authentication</a>
                     </li>
                     <li class="nav-item" id="linkToAddCertificate">
-                        <a class="nav-link" href="./ajout.html">Ajout d'un certificat</a>
+                        <a class="nav-link" href="./ajout.html">Add a degree</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./check.html">Vérification</a>
+                        <a class="nav-link" href="./check.html">Verification</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div id="maindiv">
-                    <h1>Ajouter un diplome</h1>
+                    <h1 style="text-align: center;">Add a degree</h1>
                     <form onsubmit="hashDocument()">
                         <div class="mb-3">
                             <label for="firstNameInput" class="form-label">First Name</label>
