--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -15,20 +15,20 @@
     <script type="text/javascript" src="../js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../main.html">Menu</a>
+            <a class="navbar-brand" href="../main.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="./register.html">S'identifier</a>
+                        <a class="nav-link" href="./register.html">Authentication</a>
                     </li>
                     <li class="nav-item" id="linkToAddCertificate">
-                        <a class="nav-link" href="./ajout.html">Ajout d'un certificat</a>
+                        <a class="nav-link" href="./ajout.html">Add a degree</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./check.html">Vérification</a>
+                        <a class="nav-link" href="./check.html">Verification</a>
                     </li>
                 </ul>
             </div>
@@ -37,19 +37,19 @@
 
     <div id="maindiv">
 
-        <h1 id="title">S'identifier</h1>
+        <h1 id="title">Authentication</h1>
         <div>
             <form>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Address</label>
                     <input type="text" id="addresse" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Il s'agit de l'adresse de votre wallet</div>
+                    <div id="emailHelp" class="form-text">It's your wallet address</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" id="motdepasse" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button type="submit"  onclick="authen()" class="btn btn-primary">Envoyer</button>
+                <button type="submit"  onclick="authen()" class="btn btn-primary">Submit</button>
             </form>
         </div>
 
