--- a/frontend/main.html
+++ b/frontend/main.html
@@ -15,20 +15,20 @@
     <script type="text/javascript" src="js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./main.html">Menu</a>
+            <a class="navbar-brand" href="./main.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="html/register.html">S'identifier</a>
+                        <a class="nav-link" href="html/register.html">Authentication</a>
                     </li>
                     <li class="nav-item" id="linkToAddCertificate">
-                        <a class="nav-link" href="html/ajout.html">Ajout d'un certificat</a>
+                        <a class="nav-link" href="html/ajout.html">Add a degree</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/check.html">Vérification</a>
+                        <a class="nav-link" href="html/check.html">Verification</a>
                     </li>
                 </ul>
             </div>
