ajout icon & switch pages to english

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./main.html">Home</a>
+            <a class="navbar-brand" href="./index.html"><img width="100" src="img/icon.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -36,32 +36,29 @@
     </nav>
 
     <div id="maindiv">
-        <h1 class="display-2" id="title">Bienvenue</h1>
-        <p>Le projet consiste à vérifier l'authenticité des diplômes délivrés par un établissement de formation. L'objectif est d'assurer que les diplômes délivrés par l'établissement sont bien reconnus et ont une valeur sur le marché du travail. Pour ce
-            faire, le projet mettra en place des mesures de contrôle pour garantir que les diplômes sont bien délivrés par l'établissement et que leur contenu est conforme aux exigences du programme de formation. En effet cette mesure de controle se base
-            sur la technologie de la Blockchain. Tous les diplomes seront stocké sur une blockchain, dans notre cas l'Ethereum. </p>
+        <h1 class="display-2" id="title">Welcome</h1>
+        <p>The project consists of verifying the authenticity of diplomas issued by a training institution. The objective is to ensure that the diplomas issued by the institution are well recognized and have a value on the labor market. To this end, the
+            To do this, the project will put in place control measures to ensure that the diplomas are indeed issued by the institution and that their content is consistent with the requirements of the training program. Indeed, this control measure is based on
+            Blockchain technology. All diplomas will be stored on a blockchain, in our case Ethereum.
+        </p>
 
-        <p>Ce projet peut s'utiliser de deux facons différentes : </p>
+        <p>This project can be used in two different ways:</p>
         <div class="container">
             <div class="row">
                 <div class="col-sm" id="left">
                     <br>
-                    <h1 class="display-6" style="text-align: center;">Ajouter un diplome</h1>
+                    <h1 class="display-6" style="text-align: center;">Add a degree</h1>
                     <br>
-                    <p>Tous les ans, des étudiants vont etre diplomés. L'établissement va donc rajouter leurs diplomes dans la blockchain pour le certifier. </p>
-                    <p>Il faudra donc se diriger vers l'option "S'identifier" en haut à droite de la page pour s'authentifier et rajouter le ou les diplome(s). </p>
+                    <p>Every year, students will graduate. The institution will add their diplomas in the blockchain to certify it. </p>
+                    <p>You will have to go to the "Sign in" option at the top right of the page to authenticate yourself and add your degree(s). </p>
 
-
-                    <p style="color: red;"> // IMAGE SCHEMA</p>
                 </div>
                 <div class="col-sm " id="right ">
-                    <h1 class="display-6 " style="text-align: center; ">Vérifier si un diplome est bien reconnu par l'établissement</h1>
-                    <p>Dans le cas ou une personne veut prouver que son diplome est bien reconnu par son etablissement, il va vérifier qu'il se trouve bien sur la blockchain de son établissement. </p>
+                    <h1 class="display-6 " style="text-align: center; ">Check if a degree is recognized by the establishment</h1>
+                    <p>In the case where a person wants to prove that his diploma is well recognized by his institution, he will check that it is well on the blockchain of his institution. </p>
 
-                    <p>L'étudiants ou l'entreprise voulant vérifier un diplome devra se rendre sur la page "Vérification " en haut a droite de la page</p>
-                    <p>Il faut noter qu'il n'est pas necessaire d'être authentifier pour vérifier cela. </p>
-
-                    <p style="color: red;">// IMAGE SCHEMA</p>
+                    <p>The student or company wishing to verify a diploma should go to the "Verification" page at the top right of the page</p>
+                    <p>Note that it is not necessary to be authenticated to verify this.</p>
                 </div>
             </div>
         </div>
