--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../js/navigation.js"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../main.html">Home</a>
+            <a class="navbar-brand" href="./index.html"><img width="100" src="img/icon.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
