--- a/frontend/html/register.html
+++ b/frontend/html/register.html
@@ -35,8 +35,8 @@
         </div>
     </nav>
 
-    <div id="maindiv">
-
+    <div class="container">
+    <div class="row">
         <h1 id="title">Authentication</h1>
         <div>
             <form>
@@ -53,6 +53,7 @@
             </form>
         </div>
 
+    </div>
     </div>
 </body>
 </html>
